Closed Bug 1789683 Opened 3 years ago Closed 3 years ago

PDF text rendering problem (letters doubled?)

Categories

(Core :: Graphics: Canvas2D, defect)

defect

Tracking

()

VERIFIED FIXED
106 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- unaffected
firefox104 --- unaffected
firefox105 --- unaffected
firefox106 --- verified

People

(Reporter: marco, Assigned: lsalzman)

References

(Regression, )

Details

(Keywords: regression)

Attachments

(3 files)

After the patches in bug 1773280 landed, we started seeing some text rendering problems (letters doubled?) in pdf.js.

Attached image After
Attached image Before

:lsalzman, since you are the author of the regressor, bug 1773280, could you take a look? Also, could you set the severity field?

For more information, please visit auto_nag documentation.

Flags: needinfo?(lsalzman)

Set release status flags based on info from the regressing bug 1773280

Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
Pushed by lsalzman@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c3e19b3d6a3b Fix non-stroked case in GlyphCacheEntry::MatchesGlyphs. r=aosmond,gfx-reviewers
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 106 Branch
Regressions: 1790488
Flags: needinfo?(lsalzman)
Flags: qe-verify+

Verified in 106.0b4 Firefox.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: