Bug 1789683 - Fix non-stroked case in GlyphCacheEntry::MatchesGlyphs. r=aosmond,gfx-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D156772